@@ -117,6 +117,8 @@ CHROOT_SCRIPT[eval,string]=
 COMPILETIME=30
 
 # Maximum size of solution source code in kB
+# This must not be greater than the submission.sourcecode field
+# in the database (normally MEDIUMBLOB = 16MB)
 SOURCESIZE=256
 
 # Maximum memory usage by RUNUSER in kB
