@@ -5,15 +5,26 @@
 /**
  * helperfunction to read 50,000 bytes from a file
  */
-function getFileContents($filename) {
+function getFileContents($filename, $sizelimit = true) {
 
-	if ( ! file_exists($filename) ) return '';
-	$fh = fopen($filename,'r');
-	if ( ! $fh ) error("Could not open $filename for reading");
+	if ( ! file_exists($filename) ) {
+		return '';
+	}
+	if ( ! is_readable($filename) ) {
+		error("Could not open $filename for reading: not readable");
+	}
 
-	$note = (filesize($filename) > 50000 ? "\n[output truncated after 50,000 B]\n" : '');
-	
-	return fread($fh, 50000) . $note;
+	// in PHP 5.1.0+ we can just use file_get_contents() with the maxlen parameter.
+	if ( $sizelimit && filesize($filename) > 50000 ) {
+		$fh = fopen($filename,'r');
+		if ( ! $fh ) error("Could not open $filename for reading");
+		$ret = fread($fh, 50000) . $note;
+		$ret .=  "\n[output truncated after 50,000 B]\n";
+		fclose($fh);
+		return $ret;
+	}
+
+	return file_get_contents($filename);
 }
 
 /**
