@@ -7,6 +7,8 @@ Version 2.0.0 - SVN
  - Remove 'NOW()' from SQL update/insert queries to make replication
    time-independent.
  - Fixed bug in submit_db: report errors before too-late submission.
+ - A shared file system between judgehosts and jury system is no
+   longer required. The source is now communicated via the database.
  - Improved portability to non-Linux systems (Closes: #1734046).
 
 Version 2.0.0 Release Candidate 1 - 28 May 2007
